--- a/zip/greeno/greeno/css/style.css
+++ b/zip/greeno/greeno/css/style.css
@@ -168,7 +168,7 @@ img {
 }
 
 .form-control:focus {
-     border-color: #ffffff !important;
+     border-color: #ff6d6d !important;
      box-shadow: 0 0 0 .2rem rgba(255, 255, 255, .25);
 }
 
@@ -212,7 +212,7 @@ button {
 }
 
 .theme_bg {
-     background: #38c8a8;
+     background: #972888;
 }
 
 .margin_top_30 {
