--- a/zip/greeno/greeno/css/style.css
+++ b/zip/greeno/greeno/css/style.css
@@ -1075,7 +1075,7 @@ ul.top_icon li a {
 }
 
 
-}
+
 .main-menu ul li:last-child a {
      padding-right: 0;
 }
@@ -1149,7 +1149,7 @@ ul.top_icon li a {
      display: inline-block;
      vertical-align: middle;
 }
-.main-menu ul>li:nth-child (6) {
+.main-menu ul>li:nth-child () {
      padding-right: 0px;
 }
 .nav>li {
