--- a/zip/greeno/greeno/css/style.css
+++ b/zip/greeno/greeno/css/style.css
@@ -1149,7 +1149,7 @@ ul.top_icon li a {
      display: inline-block;
      vertical-align: middle;
 }
-.main-menu ul>li:nth-child () {
+.main-menu ul>li:nth-child (6) {
      padding-right: 0px;
 }
 .nav>li {
